--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -12,6 +12,8 @@
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
+org.gradle.java.home=C:/Users/tiiag/Documents/jdk-11.0.25_windows-x64_bin/jdk-11.0.25
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
